0.96 Added help-button (for manual download) and confirm for action in web-ui